--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.DoordashListActivity"
+            android:name=".ui.RestaurantsActivity"
             android:screenOrientation="portrait">
 
             <intent-filter>
